force-app/main/default/objects/MonthlyDomicilioROAKPI__c/MonthlyDomicilioROAKPI__c.object-meta.xml
<CustomObject>
    <description>Métricas mensuales de ROA por domicilio/sucursal (misma lógica de corte que MonthlyROAKPI__c, último día del mes).</description>
    <label>KPI Mensual ROA Domicilio</label>
    <nameField>
        <label>Nombre KPI Mensual ROA Domicilio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Mensual ROA Domicilios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>