force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/CarteraActiva__c.field-meta.xml
<CustomField>
    <fullName>CarteraActiva__c</fullName>
    <description>Domicilios distintos con factura (domicilio informado) en los últimos 3 meses al cierre.</description>
    <label>Cartera activa</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>