force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/Fugados__c.field-meta.xml
<CustomField>
    <fullName>Fugados__c</fullName>
    <description>Domicilios activos (3 meses) sin factura en el mes de cierre.</description>
    <label>Fugados</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>