force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Fecha de referencia del cierre (paridad con MonthlyROAKPI__c: último día del mes en job diario).</description>
    <label>Mes</label>
    <required>true</required>
    <type>Date</type>
</CustomField>