force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/MonthNumber__c.field-meta.xml
<CustomField>
    <fullName>MonthNumber__c</fullName>
    <description>Número de mes 1-12.</description>
    <label>Número de mes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>