force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/Nuevos__c.field-meta.xml
<CustomField>
    <fullName>Nuevos__c</fullName>
    <description>Domicilios con primera factura en el mes de cierre (sin historial previo en ventana de 12 meses).</description>
    <label>Nuevos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>