force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario propietario de las cuentas cuyos domicilios se incluyen en la cartera analizada.</description>
    <inlineHelpText>Propietario de cuenta (cartera activa ROA por sucursal).</inlineHelpText>
    <label>Propietario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KPI_Mensual_ROA_Domicilio</relationshipName>
    <type>Lookup</type>
</CustomField>