force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/Recuperados__c.field-meta.xml
<CustomField>
    <fullName>Recuperados__c</fullName>
    <description>Domicilios elegibles como recuperados que facturaron en el mes de cierre (misma lógica que MonthlyROAKPI__c).</description>
    <label>Recuperados</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>