force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/Retenidos__c.field-meta.xml
<CustomField>
    <fullName>Retenidos__c</fullName>
    <description>Domicilios activos (3 meses) que facturaron también en el mes de cierre.</description>
    <label>Retenidos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>