force-app/main/default/objects/MonthlyDomicilioROAKPI__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Clave única OwnerId|YYYY-MM para upsert del cierre mensual por domicilio.</description>
    <externalId>true</externalId>
    <label>Clave única</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>